Added sticky nav, social footer, changed title vid, and small quality updates

--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fadeout Video Background</title>
+    <title>Ham Galaxy Portal</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en"/>
+    <script src="https://kit.fontawesome.com/9e4cb2d322.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="banner">
         <div class="banner-video">
-            <video src="video/tech-background-sample.mp4" autoplay="" muted="" loop=""></video>
+            <video src="video/dna-background.mp4" autoplay="" muted="" loop=""></video>
         </div>
         <div class="banner-text">
-            <h2>HAM GALAXY</h2>
-            <nav id="navbar">
+            <h2 id="title-text">HAM GALAXY</h2>
+            <header class="navbar">
                 <a href="index.html">Home</a>
                 <a href="#">Play</a>
+                <a href="#">Factions</a>
                 <a href="#">Community</a>
-                <a href="#">Contact</a>
-            </nav>
+                <a href="#">Shop</a>
+            </header>
         </div>
     </section>
     <section>
@@ -27,26 +29,27 @@
             <h1>Join the Fight!</h1>
             <br><br>
             <p>In the 1960s, during a turbulent era of scientific experimentation, humans embarked on a venture that would forever
-                alter the course of evolution on Earth. In their relentless pursuit of enhancing human intelligence, scientists
-                conducted controversial experiments on both pigs and chimpanzees, utilizing a serum designed to accelerate cognitive
-                development. These experiments, however, appeared to be colossal failures at the time, as the expected results did not
-                materialize as anticipated.
+                alter the course of evolution on Earth. In their relentless pursuit to enhance human intelligence, scientists
+                conducted controversial experiments on both pigs and chimpanzees. Years of testing culminated in the administration of 
+                a super-serum, designed to accelerate cognitive development. However, their efforts appeared to be colossal failure, 
+                as the expected results would not materialize as anticipated.
                 <br><br> 
                 Unknown to humanity, the intelligence serum had not failed entirely; rather, its effects were far subtler and much
-                slower than expected. Unbeknownst to humans, this serum had subtly altered the genetic code of the test subjects,
-                setting in motion a transformation that would span countless generations.
+                slower than predicted. Unbeknownst to humans, this serum had indeed altered the genetic code of the test subjects,
+                setting in motion a transformation that would change the course of their subjects evolution.
                 <br><br>
-                As the serum-induced genetic changes manifested, the affected pigs and chimps began to exhibit signs of heightened
-                intelligence over the course of hundreds of generations. Their cognitive abilities expanded at an astonishing rate, far
-                surpassing the natural evolution that humans had undergone. While humanity descended into self-destructive conflicts,
-                driven by wars and a disheartening trend of breeding intellectual mediocrity, the pigs and chimps in the shadows
-                underwent a silent transformation.
+                As these serum-induced mutations manifested, the affected pigs and chimps began to exhibit signs of heightened
+                intelligence, gradually increasing with each new generation. Their cognitive abilities expanded at an astonishing rate, far
+                surpassing the natural development that humans had undergone. While humanity descended into conflict and a disheartening 
+                trend of intellectual mediocrity, the pigs and chimps waited in the shadows undergoing a silent transformation.
                 <br><br>
                 By the time humanity had reached its inevitable demise, leaving the Earth scarred and depleted, the descendants of those
-                experimentally altered pigs and chimps emerged as the most advanced species on the planet. The pigs, carrying the
-                genetic legacy of those 1960s experiments, now possessed unparalleled intelligence, while the AstroChimps, who had been
-                sent into space with the altered gene, had similarly evolved into hyper-intelligent beings.
+                experimentally altered pigs and chimps emerged as the new dominant species. The pigs, carrying the
+                genetic legacy of those initial experiments, now possessed an intellect akin to their past captors, while the AstroChimps, 
+                who had been sent into space during cold war trials, had survived and similarly evolved into hyper-intelligent beings.
                 <br><br>
+                Same in nature, yet, so very different in nurture, the futures of these divergent kin would soon collide in a struggle 
+                mankind had never imagined...
            </p>
         </div>
     </section>
@@ -66,34 +69,34 @@
         <div class="content">
             <p>
                 In the year 2777 CE, the Earth had become a very different place. The humans were gone, their once-mighty civilization
-                reduced to dust by their own folly. In their place stood the intelligent pigs and the AstroChimps, the nearest genetic
+                reduced to dust by their own folly. In their place stood the intelligent pigs and chimps, the nearest genetic
                 relatives of the former rulers of Earth. With their exceptional intellect and advanced technologies, they had not only
                 inherited the Earth but had also expanded their dominion into the far reaches of the galaxy.
                 <br><br>
-                Despite their shared genetic heritage and the altered gene that had shaped their destinies, negotiations between the two
-                species ultimately broke down. The AstroChimps were resolute in their belief that they were the rightful heirs to Earth,
-                spurred on by a sense of genetic heritage and destiny.
+                Despite their shared genetic heritage and the altered gene that had shaped their destinies, relations between the two
+                species ultimately broke down. The chimps were resolute in their belief that they were the rightful heirs to Earth,
+                spurred on by a sense of genetic similarity to their humans ancestors. The pigs were too proud to relinquish any shred 
+                of what they'd built from their past captivity and held no value in the human influences of the past.
                 <br><br>
-                War was declared, and it soon spilled beyond the confines of Earth. Both the hyper-intelligent pigs and AstroChimps
-                wielded futuristic technology, turning distant planets and star systems into battlegrounds as they fiercely competed for
-                dominance in the cosmos.
+                War was declared, and it soon spilled beyond the confines of Earth. Both the Hognauts and AstroChimps
+                wielded futuristic technology, the battle spilling out into the galaxy, turning distant planets and star systems into 
+                battlegrounds as they competed for dominance.
                 <br><br>
-                Their struggle, rooted in the genetic experiments of the 1960s, symbolized the unpredictable and profound consequences
-                of human scientific curiosity. It was a battle for supremacy that transcended Earth's boundaries and would ultimately
-                determine the fate of countless worlds and the legacy of two species born from the remnants of human ambition.
+                Their struggle, rooted in the genetic experiments of the 1960s, was the last laugh of the humans and their boundless 
+                scientific curiosity. It was a battle for supremacy that would ultimately determine the fate of countless worlds and 
+                the legacy of two species born from the remnants of ancient ambitions.
                 <br><br>
-                In this epic tale of evolution, conflict, and ambition, the hyper-intelligent pigs and AstroChimps emerged as the
-                unintended, extraordinary products of humanity's past experiments, forging a new era in intergalactic history. The
-                battle for control of habitable worlds had begun, its outcome shrouded in the mysteries of genetic manipulation and the
-                complex web of evolution.
+                In this epic tale of evolution, conflict, and entitlement, these Hognauts and AstroChimps forge a new era in 
+                intergalactic history. The war is well underway, and it steams ahead, unslowed by the realities of its devastation. 
+                Today, the Hognauts and Astrochimps meet in epic space battles throughout the galaxy. They expand their reaches, 
+                contest habitable worlds, and attempt to enforce their claim to it all.
                 <br><br>
-                Today, the Hognauts and Astrochimps and their various alliances engage in epic space battles throughout the galaxy, as
-                they expand their reaches, contesting habitable worlds and resources and attempting to outpace each other’s technology.
             </p>
         </div>
     </section>
     <section>
         <div class="container"">
+            <p id="video-title">HAM GALAXY THEME - RISE OF THE HOGNAUTS<br><br></p>
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0XbXiK0Noe4?si=TGrMGhUj6Vq01LjX"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -108,7 +111,20 @@
             video.style.opacity = value;
         })
     </script>
-
+    <footer>
+        <div class="footer-class">
+            <div class="social-icons">
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
+    <div class="footer-bottom">
+        <br>
+        <p>Copyright &copy;2024; <span class="company">Emporos Digital Ltd</span></p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
