Added starting content of factions page

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <h2 id="title-text">HAM GALAXY</h2>
             <header class="navbar">
                 <a href="index.html">Home</a>
-                <a href="#">Play</a>
-                <a href="#">Factions</a>
-                <a href="#">Community</a>
-                <a href="#">Shop</a>
+                <a href="play.html">Play</a>
+                <a href="factions.html">Factions</a>
+                <a href="community.html">Community</a>
+                <a href="shop.html">Shop</a>
             </header>
         </div>
     </section>
     <section>
         <div class="content">
-            <h1>Join the Fight!</h1>
+            <h1>Origins</h1>
             <br><br>
             <p>In the 1960s, during a turbulent era of scientific experimentation, humans embarked on a venture that would forever
                 alter the course of evolution on Earth. In their relentless pursuit to enhance human intelligence, scientists
@@ -96,7 +96,7 @@
     </section>
     <section>
         <div class="container"">
-            <p id="video-title">HAM GALAXY THEME - RISE OF THE HOGNAUTS<br><br></p>
+            <p class="lesser-title">HAM GALAXY THEME - RISE OF THE HOGNAUTS<br><br></p>
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0XbXiK0Noe4?si=TGrMGhUj6Vq01LjX"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -123,7 +123,7 @@
     </footer>
     <div class="footer-bottom">
         <br>
-        <p>Copyright &copy;2024; <span class="company">Emporos Digital Ltd</span></p>
+        <p>Copyright &copy; 2024 <span class="company">Emporos Digital Ltd</span></p>
     </div>
     <script src="./script.js"></script>
 </body>
