Added Play page, improved some css formatting and layout issues, added new images, fixed issue with footer text

--- a/factions.html
+++ b/factions.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ham Galaxy Portal</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./factions.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en" />
     <script src="https://kit.fontawesome.com/9e4cb2d322.js" crossorigin="anonymous"></script>
 </head>
@@ -24,7 +25,7 @@
     <main class="flex-container">
         <p class="lesser-title">Hognauts</p>
         <div class="hognaut-class" style=" display: flex; flex-direction: row; ">
-            <img src="images/Red-Fighter.png" alt="">
+            <img src="images/Hognaut.png" alt="">
             <div>
                 <section>
                     <div class="content">
@@ -50,7 +51,7 @@
                     </div>
                 </section>
             </div>
-            <img src="images/Chimp-Colony.png" alt="">
+            <img src="images/AstroChimp.png" alt="">
         </div>
     </main>
     <footer>
