Removed 'theme' from video title, played with faction page orientation

--- a/factions.html
+++ b/factions.html
@@ -20,36 +20,34 @@
         <a href="shop.html">Shop</a>
     </header>
     <div>
+        <br><br><br><br>
         <h1>FACTIONS</h1>
+            <br><br><br>
     </div>
     <main class="flex-container">
         <p class="lesser-title">Hognauts</p>
         <div class="hognaut-class" style=" display: flex; flex-direction: row; ">
             <img src="images/Hognaut.png" alt="">
             <div>
-                <section>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad ipsum 
-                            quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga amet! 
-                            Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
-                        </p> 
-                    </div>
-                </section>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad ipsum 
+                        quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga amet! 
+                        Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
+                    </p> 
+                </div>
             </div>
         </div>
         <p class="lesser-title">AstroChimps</p>
         <div class="chimp-class" style=" display: flex; flex-direction: row; ">
             <div>
-                <section>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad
-                            ipsum
-                            quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga
-                            amet!
-                            Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
-                        </p>
-                    </div>
-                </section>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad
+                        ipsum
+                        quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga
+                        amet!
+                        Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
+                    </p>
+                </div>
             </div>
             <img src="images/AstroChimp.png" alt="">
         </div>
