--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     <section>
         <div class="container"">
-            <p class="lesser-title">HAM GALAXY THEME - RISE OF THE HOGNAUTS<br><br></p>
+            <p class="lesser-title">HAM GALAXY - RISE OF THE HOGNAUTS<br><br></p>
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0XbXiK0Noe4?si=TGrMGhUj6Vq01LjX"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
