--- a/factions.html
+++ b/factions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ham Galaxy Portal</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./factions.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en" />
     <script src="https://kit.fontawesome.com/9e4cb2d322.js" crossorigin="anonymous"></script>
@@ -21,33 +21,29 @@
     </header>
     <div>
         <br><br><br><br>
-        <h1>FACTIONS</h1>
-            <br><br><br>
+        <h1 class="story-title">FACTIONS</h1>
+        <br><br><br>
     </div>
     <main class="flex-container">
         <p class="lesser-title">Hognauts</p>
         <div class="hognaut-class" style=" display: flex; flex-direction: row; ">
             <img src="images/Hognaut.png" alt="">
             <div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad ipsum 
-                        quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga amet! 
-                        Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
-                    </p> 
-                </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad ipsum 
+                    quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga amet! 
+                    Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
+                </p> 
             </div>
         </div>
         <p class="lesser-title">AstroChimps</p>
         <div class="chimp-class" style=" display: flex; flex-direction: row; ">
             <div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad
-                        ipsum
-                        quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga
-                        amet!
-                        Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
-                    </p>
-                </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad
+                    ipsum
+                    quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga
+                    amet!
+                    Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
+                </p>
             </div>
             <img src="images/AstroChimp.png" alt="">
         </div>
