Added custom cursors for hover and active events

--- a/play.html
+++ b/play.html
@@ -31,7 +31,7 @@
                 <input type="password" placeholder="Enter Password" name="psw" required>
                 
                 <button type="submit" class="btn">Login</button>
-                <a href="#" style="color: #b4b4b4; font-size: 12px; font-style: italic; text-decoration: none;">
+                <a href="#" class="password-reset-class" style="color: #b4b4b4; font-size: 12px; font-style: italic; text-decoration: none;">
                     Forgot Password</a>
         </form>
     </div>
