Removed global styling for paragraph elements. Made story content on homepage its own class

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="content">
             <h1 class="story-title">Origins</h1>
             <br><br>
-            <p>In the 1960s, during a turbulent era of scientific experimentation, humans embarked on a venture that would forever
+            <p class="story-text">In the 1960s, during a turbulent era of scientific experimentation, humans embarked on a venture that would forever
                 alter the course of evolution on Earth. In their relentless pursuit to enhance human intelligence, scientists
                 conducted controversial experiments on both pigs and chimpanzees. Years of testing culminated in the administration of 
                 a super-serum, designed to accelerate cognitive development. However, their efforts appeared to be colossal failure, 
@@ -65,7 +65,7 @@
     </section>
     <section>
         <div class="content">
-            <p>
+            <p class="story-text">
                 In the year 2777 CE, the Earth had become a very different place. The humans were gone, their once-mighty civilization
                 reduced to dust by their own folly. In their place stood the intelligent pigs and chimps, the nearest genetic
                 relatives of the former rulers of Earth. With their exceptional intellect and advanced technologies, they had not only
