--- a/play.html
+++ b/play.html
@@ -37,8 +37,8 @@
                 </form>
             </div>
             <div class="countdown-timer">
-                <h1 class="timer-label" style="text-align: center; font-family: 'Orbitron', sans-serif;">TIME TO LAUNCH:
-                <p id="timer" style="font-family: 'Orbitron', sans-serif; font-size: 40px;"></p>
+                <h1 class="timer-label" style="text-align: center; font-family: 'Orbitron', sans-serif;">TIME TO LAUNCH</h1>
+                <p id="timer" style="font-family: 'Orbitron', sans-serif; font-size: 40px; text-align: center;"></p>
             </div>
     <script>
         // Set the date we're counting down to
