Added sliding info-boxes to faction page, and additional story content

--- a/factions.html
+++ b/factions.html
@@ -24,30 +24,34 @@
         <h1 class="story-title">FACTIONS</h1>
         <br><br><br>
     </div>
-    <main class="flex-container">
-        <p class="lesser-title">Hognauts</p>
-        <div class="hognaut-class" style=" display: flex; flex-direction: row; ">
-            <img src="images/Hognaut.png" alt="">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad ipsum 
-                    quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga amet! 
-                    Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
-                </p> 
-            </div>
+<div class="character-container">
+    <p class="lesser-title">Hognauts</p>
+    <div class="character">
+        <img src="images/Hognaut.png" alt="Character 1">
+        <div class="info-box">
+            <p>The Hognauts, descendants of the genetically enhanced pigs of Earth's past, have assumed the mantle of galactic rulers. 
+            With an air of entitlement and elitism, their society is a beacon of opulence and extravagance, fueled by their insatiable
+            consumerist desires. Ruled by a self-appointed royal family, they view themselves as the rightful stewards of the galaxy, their
+            expansionist ambitions driven by a conviction that they alone can bring about the "betterment of all." Armed with
+            overwhelming military might, they conquer planets and exploit resources with ruthless efficiency, their rapid population growth
+            ensuring a constant stream of soldiers to fuel their conquests.</p>
         </div>
-        <p class="lesser-title">AstroChimps</p>
-        <div class="chimp-class" style=" display: flex; flex-direction: row; ">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat excepturi ab ipsam odio itaque ad
-                    ipsum
-                    quae nulla, quam atque dolores animi nam aspernatur laboriosam voluptates deleniti distinctio fuga
-                    amet!
-                    Dicta aliquam vero sit, debitis vel hic veritatis ea laboriosam?
-                </p>
-            </div>
-            <img src="images/AstroChimp.png" alt="">
+    </div>
+    <p class="lesser-title">AstroChimps</p>
+    <div class="character">
+        <img src="images/AstroChimp.png" alt="Character 2">
+        <div class="info-box">
+            <p>The AstroChimps, also modified by the same genetic experiments, are the descendants of chimpanzees sent into space 
+            during humanity's Cold War era, and survived. They thrived among the stars and colonized many worlds. Now envious 
+            of the Hognauts' power and ungrateful control of Earth, their rightful home, they strive to rebel against the chimps 
+            expansion. They embody cunning and ingenuity.
+            Utilizing guerrilla tactics and scavenging for resources, they wage a relentless war against their swine opposition.
+            Their inventive nature and knack for adaptation make them formidable opponents. As they fight for their place in the 
+            galaxy, they strive to reclaim what they believe is rightfully theirs, the legacy of humanity and dominion over the stars. </p>
         </div>
-    </main>
+    </div>
+    <!-- Add more characters as needed -->
+</div>
     <footer>
         <div class="footer-class">
             <div class="social-icons">
