--- a/factions.html
+++ b/factions.html
@@ -42,12 +42,12 @@
         <img src="images/AstroChimp.png" alt="Character 2">
         <div class="info-box">
             <p>The AstroChimps, also modified by the same genetic experiments, are the descendants of chimpanzees sent into space 
-            during humanity's Cold War era, and survived. They thrived among the stars and colonized many worlds. Now envious 
-            of the Hognauts' power and ungrateful control of Earth, their rightful home, they strive to rebel against the chimps 
+            during humanity's Cold War era and survived. They thrived among the stars and colonized many worlds. Now envious 
+            of the Hognauts' power and ungrateful inheritance of Earth, their rightful home, they strive to rebel against the pig's 
             expansion. They embody cunning and ingenuity.
             Utilizing guerrilla tactics and scavenging for resources, they wage a relentless war against their swine opposition.
             Their inventive nature and knack for adaptation make them formidable opponents. As they fight for their place in the 
-            galaxy, they strive to reclaim what they believe is rightfully theirs, the legacy of humanity and dominion over the stars. </p>
+            galaxy, they strive to reclaim the legacy humanity left behind. </p>
         </div>
     </div>
     <!-- Add more characters as needed -->
